[package]
name = "flc"
version = "4.5.0"
description = "Foundry Lightweight Client"
authors = ["phenomen"]
license = "MIT"
repository = "@phenomen/flc"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = [ "devtools" ] }
tauri-plugin-shell = "2.0.0-alpha"
tauri-plugin-http = "2.0.0-alpha"
tauri-plugin-dialog = "2.0.0-alpha"
tauri-plugin-global-shortcut = "2.0.0-alpha"
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
